# rnr-aws

./: .gitignore  README.md  infrastructure_diagram.puml
.github/workflows/: cicd-container.yml  cicd-ecs.yml  cicd-lambdas.yml
data/: divide-attributes.parquet  divides.parquet  flowpath-attributes-ml.parquet  flowpath-attributes.parquet  flowpaths.parquet  hydrolocations.parquet  lakes.parquet  network.parquet  nexus.parquet  pois.parquet
ecs/worker/: Dockerfile  run_rnr.sh  worker.py
lambda_layers/postprocess_dependencies/: requirements.txt
lambdas/autoscaler/: autoscaler_lambda.py
lambdas/postprocess/: post_process_lambda.py  requirements.txt
lambdas/producer/: producer_lambda.py  pyproject.toml  requirements.txt
lambdas/producer/src/hml_reader/: __init__.py  publish.py  rabbit_connection.py  settings.py
lambdas/producer/src/hml_reader/schemas/: weather.py
scripts/: build_lambdas.sh
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/app/: main.tf  outputs.tf  variables.tf
terraform/modules/data_stores/: main.tf  outputs.tf  variables.tf
terraform/modules/iam_roles/: main.tf  outputs.tf  variables.tf
terraform/modules/messaging/: main.tf  outputs.tf  variables.tf
terraform/modules/security_groups/: main.tf  outputs.tf  variables.tf
