[project]
name = "hml_reader"
version = "2025.6.0"
description = "an hml reader service to parse the weather.gov api"
authors = [
    { name = "Tadd.Bindas", email = "Tadd.N.Bindas@rtx.com" }
]
dependencies = [
    "aioboto3==15.1.0",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "geopandas==1.0.1",
    "numpy==1.26.3",
    "pandas==2.2.2",
    "pyarrow==15.0.0",
    "xarray==2024.1.1",
    "isort==4.3.21",
    "aio-pika==9.4.3",
    "pydantic-settings==2.3.4",
    "redis==5.0.7",
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "matplotlib==3.9.0",
    "netcdf4==1.6.5",
    "jinja2==3.1.4",
    "rdflib==7.1.3",
    "tqdm==4.64.1",
    "xmltodict==0.12.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hml_reader"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
