[project]
name = "hml_reader"
version = "2025.6.0"
description = "an hml reader service to parse the weather.gov api"
authors = [
    { name = "Tadd.Bindas", email = "Tadd.N.Bindas@rtx.com" }
]
dependencies = [
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "aio-pika==9.4.3",
    "pydantic-settings==2.3.4",
    "aioboto3==15.1.0",
    "aio-pika==9.4.3",
    "redis==5.0.7",
    "rdflib==7.1.3",
    "tqdm==4.64.1",
    "xmltodict==0.12.0",
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hml_reader"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
